--- a/README.rdoc
+++ b/README.rdoc
@@ -6,6 +6,8 @@ which a response will be send back to the client with the desired HTTP status, p
 You can use this plugin to access control mechanisms. You can simply raise a HTTPStatus::Forbidden if a user is not allowed to
 perform a certain action. A nice looking error page will be the result. See the example below 
 
+See the project wiki (http://github.com/wvanbergen/http_status_exceptions/wikis) for additional documentation.
+
 == Installation
 
 Installation is simple. Simply add the gem in your <tt>environment.rb</tt>:
